# minepack

./: .gitignore  Cargo.toml  README.md  mise.toml
.github/prompts/: deno.prompt.md  rust.prompt.md  shared.prompt.md
.github/workflows/: ci.yml
docs/development/: curseforge.md
examples/development/: curseforge_client.rs  curseforge_client_download_mod.rs  curseforge_client_get_mod_info.rs  curseforge_client_search_mods.rs
scripts/: test.ts
src/: lib.rs  main.rs
src/api/: curseforge.rs
src/api/curseforge/: mod.rs  schema.rs
src/commands/: mod.rs
src/commands/add/: mod.rs
src/commands/import/: mod.rs
src/commands/init/: mod.rs
src/commands/search/: mod.rs
src/models/: config.rs  mod.rs  mod_info.rs
src/utils/: errors.rs  mod.rs
tests/: e2e_tests.rs  integrated_tests.rs
tests/fixtures/api.curseforge.com/mods/: post_1030830.json
tests/fixtures/api.curseforge.com/mods/files/: post_6332315.json
tests/mocks/api.curseforge.com/v1/mods/1030830/: index.json
tests/mocks/api.curseforge.com/v1/mods/1030830/files/6332315/: index.json
tests/mocks/api.curseforge.com/v1/mods/1030830/files/6332315/download-url/: index.json
tests/mocks/api.curseforge.com/v1/mods/1030830/files?gameVersion=1.21.1/: index.json
tests/mocks/api.curseforge.com/v1/mods/306612/: index.json
tests/mocks/api.curseforge.com/v1/mods/388172/: index.json
tests/mocks/api.curseforge.com/v1/mods/532610/: index.json
tests/mocks/api.curseforge.com/v1/mods/841890/: index.json
tests/mocks/api.curseforge.com/v1/mods/search?gameId=432&searchFilter=oritech/: index.json
tests/mocks/api.curseforge.com/v1/mods/search?gameId=432&slug=oritech/: index.json
tests/mocks/scripts/: fakeurl.ts
