[package]
name = "minepack"
version = "0.1.0"
edition = "2021"
authors = ["r4ai"]
description = "A CLI tool for creating Minecraft Modpacks"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0.81"
thiserror = "1.0.58"
dialoguer = "0.11.0"
indicatif = "0.17.8"
console = "0.15.8"
toml = "0.8.12"
dirs = "5.0.1"
zip = "0.6.6"

[[example]]
name = "dev_curseforge_client"
path = "examples/development/curseforge_client.rs"
