[package]
name = "minepack"
version = "0.1.0"
edition = "2021"
authors = ["r4ai"]
description = "A CLI tool for creating Minecraft Modpacks"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11", features = [
  "json",
  "rustls-tls",
], default-features = false }
tokio = { version = "1.36", features = ["full"] }
anyhow = { version = "1.0.81", features = ["backtrace"] }
thiserror = "1.0.58"
dialoguer = "0.11.0"
indicatif = "0.17.8"
console = "0.15.8"
toml = "0.8.12"
dirs = "5.0.1"
zip = "0.6.6"
url = "2.5.0"
walkdir = "2.4.0"

[dev-dependencies]
assert_fs = "1.1.0"
predicates = "3.1.0"
env_logger = "0.10.0"

[[example]]
name = "dev_curseforge_client_get_mod_info"
path = "examples/development/curseforge_client_get_mod_info.rs"

[[example]]
name = "dev_curseforge_client_search_mods"
path = "examples/development/curseforge_client_search_mods.rs"

[[example]]
name = "dev_curseforge_client_download_mod"
path = "examples/development/curseforge_client_download_mod.rs"
